After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 783505 - fix invalid use of G_BEGIN_DECLS in src/compositor/meta-texture-tower.h
fix invalid use of G_BEGIN_DECLS in src/compositor/meta-texture-tower.h
Status: RESOLVED FIXED
Product: mutter
Classification: Core
Component: general
git master
Other All
: Normal minor
: ---
Assigned To: mutter-maint
mutter-maint
Depends on:
Blocks:
 
 
Reported: 2017-06-07 11:27 UTC by gschwind
Modified: 2017-06-14 09:18 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
path that fix the bug (894 bytes, patch)
2017-06-07 11:27 UTC, gschwind
none Details | Review
shorten the title of the patch (868 bytes, patch)
2017-06-14 08:37 UTC, gschwind
committed Details | Review

Description gschwind 2017-06-07 11:27:40 UTC
Created attachment 353316 [details] [review]
path that fix the bug

At the end of the file src/compositor/meta-texture-tower.h G_BEGIN_DECLS is used where G_END_DECLS should be instead.
Comment 1 Florian Müllner 2017-06-07 12:20:04 UTC
Review of attachment 353316 [details] [review]:

Whoops, good catch! The commit message should be shortened a bit (try to limit it to 60-70 characters), otherwise looks good.

(If you don't have commit access, please say so, and we'll push the patch with a fixed up commit message)
Comment 2 gschwind 2017-06-14 08:37:33 UTC
Created attachment 353734 [details] [review]
shorten the title of the patch

Hello,

I guess I do not have the right to commit, thus please go ahead to push the patch.

Best regards.