texture-tower: Fix usage of G_*_DECLS

https://bugzilla.gnome.org/show_bug.cgi?id=783505